# slambook2

./: README.md
ch2/: CMakeLists.txt
ch5/rgbd/: joinMap.cpp
ch6/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
nicolas/ch1/1.5 Style/: helloWorld.cpp
nicolas/ch1/1.5_helloWorld/: helloWorld  helloWorld.cpp
nicolas/ch1/1.7 Exercices (Self-test questions)/: question3_c++_example1_class_multiple_objects_example.cpp  question3_c++_example2_stl_vector.cpp  question3_c++_example3_stl_vector_iterator  question3_c++_example3_stl_vector_iterator.cpp  question3_c++_example4_stl_vector_sort  question3_c++_example4_stl_vector_sort.cpp  question3_c++_example5_stl_vector_vector_of_objects  question3_c++_example5_stl_vector_vector_of_objects.cpp  question3_c++_example6_stl_vector_sort_vector_of_objects_by_name  question3_c++_example6_stl_vector_sort_vector_of_objects_by_name.cpp  question3_c++_example7_stl_list  question3_c++_example7_stl_list.cpp  question3_c++_example8_stl_deque.cpp
nicolas/ch1/1.7_Exercices_solution/: question3_c++_example1_class_multiple_objects_example  question3_c++_example1_class_multiple_objects_example.cpp  question3_c++_example2_stl_vector  question3_c++_example2_stl_vector.cpp  question3_c++_example6_stl_vector_sort_vector_of_objects_by_name.cpp  question3_c++_example8_stl_deque  question3_c++_example8_stl_deque.cpp
nicolas/ch2/: CMakeLists.txt  helloSLAM
nicolas/ch2/include/: libHelloSLAM.cpp  libHelloSLAM.h
nicolas/ch2/src/: helloSLAM.cpp  useHello.cpp
nicolas/ch3/: .gitignore  CMakeLists.txt
nicolas/ch3/examples/: CMakeLists.txt  coordinateTransform  coordinateTransform.cpp  plotTrajectory
nicolas/ch3/examples/src/: coordinateTransform  coordinateTransform.cpp  plotTrajectory.cpp
nicolas/ch3/exercises/: CMakeLists.txt
nicolas/ch3/exercises/ex3/: slambook2_ch3_ex3.m
nicolas/ch3/exercises/ex5/: CMakeLists.txt
nicolas/ch3/exercises/ex5/src/: ex5.cpp
nicolas/ch3/exercises/ex6/: CMakeLists.txt
nicolas/ch3/include/: libUtils.cpp  libUtils.h
nicolas/ch3/useEigen/: CMakeLists.txt  eigenMatrix.cpp
nicolas/ch3/useEigen/src/: eigenMatrix.cpp
nicolas/ch3/useGeometry/: CMakeLists.txt  useGeometry  useGeometry.cpp
nicolas/ch3/useGeometry/src/: useGeometry.cpp
nicolas/ch3/visualizeGeometry/: CMakeLists.txt
nicolas/ch3/visualizeGeometry/src/: visualizeGeometry.cpp
nicolas/ch4/: CMakeLists.txt
nicolas/ch4/include/: libUtils.cpp
nicolas/ch4/trajectoryError/: CMakeLists.txt
nicolas/ch4/trajectoryError/include/: trajectoryError.h
nicolas/ch4/trajectoryError/src/: trajectoryError.cpp
nicolas/ch4/useSophus/: CMakeLists.txt
nicolas/ch4/useSophus/src/: useSophus.cpp
nicolas/ch5/: CMakeLists.txt
nicolas/ch5/imageBasics/: CMakeLists.txt
nicolas/ch5/imageBasics/include/: imageBasics.h  undistortImage.h
nicolas/ch5/imageBasics/src/: imageBasics.cpp  retained_undistort_image.cpp  undistortImage.cpp
nicolas/ch5/include/: libUtils.cpp  libUtils.h
nicolas/ch5/rgbd/: CMakeLists.txt
nicolas/ch5/rgbd/include/: jointMap.h
nicolas/ch5/rgbd/src/: jointMap.cpp
nicolas/ch5/stereoVision/: CMakeLists.txt
nicolas/ch5/stereoVision/include/: stereoVision.h
nicolas/ch5/stereoVision/src/: stereoVision.cpp
nicolas/ch6/: CMakeLists.txt
nicolas/ch6/include/: libUtils.cpp  libUtils.h
nicolas/ch6/optimization/: CMakeLists.txt
nicolas/ch6/optimization/include/: ceresCurveFitting.h  g2oCurveFitting.h  gaussNewton.h
nicolas/ch6/optimization/src/: ceresCurveFitting.cpp  g2oCurveFitting.cpp  gaussNewton.cpp
nicolas/ch7/: CMakeLists.txt
nicolas/ch7/include/: bundleAdjustment.cpp  bundleAdjustment.h  find_features_matches.cpp  find_features_matches.h  libUtils.cpp  libUtils.h  pose_estimation_2d2d.cpp  pose_estimation_2d2d.h  pose_estimation_3d2d.cpp  pose_estimation_3d2d.h  pose_estimation_3d2d_bundleAdjustment.cpp  pose_estimation_3d2d_bundleAdjustment.h  pose_estimation_3d3d.cpp  pose_estimation_3d3d.h  pose_estimation_3d3d_ICP.cpp  pose_estimation_3d3d_ICP.h
nicolas/ch7/orb_features/: CMakeLists.txt
nicolas/ch7/orb_features/include/: find_features_matches.cpp  find_features_matches.h  pose_estimation_2d2d.cpp  pose_estimation_2d2d.h
nicolas/ch7/orb_features/src/: features_cv.cpp  features_cv_video.cpp  orb_cv.cpp  orb_cv_original.cpp  orb_cv_read_dataset_images.cpp  orb_cv_read_images.cpp  orb_cv_video.cpp  orb_self.cpp  orb_self_original.cpp
nicolas/ch7/pose_estimation/: CMakeLists.txt
nicolas/ch7/pose_estimation/src/: pose_estimation_2d2d.cpp  pose_estimation_2d2d_tum.cpp  pose_estimation_3d2d.cpp  pose_estimation_3d2d_original.cpp  pose_estimation_3d3d.cpp  pose_estimation_3d3d_original.cpp
nicolas/ch7/triangulation/: CMakeLists.txt
nicolas/ch7/triangulation/src/: triangulation.cpp  triangulation_original.cpp
nicolas/ch8/: CMakeLists.txt  direct_method.cpp
nicolas/ch8/include/: OpticalFlowTracker.cpp  OpticalFlowTracker.h  optical_flow.cpp  optical_flow.h  optical_flow_tracker.cpp  optical_flow_tracker.h
nicolas/ch8/optical_flow_book_examples/: CMakeLists.txt
nicolas/ch8/optical_flow_book_examples/include/: OpticalFlowTracker.cpp  OpticalFlowTracker.h  optical_flow.cpp  optical_flow.h
nicolas/ch8/optical_flow_book_examples/src/: direct_method.cpp  direct_method_original.cpp  optical_flow.cpp  optical_flow_original.cpp  optical_flow_video_multi.cpp  optical_flow_video_opencv.cpp  optical_flow_video_opencv_playground.cpp  optical_flow_video_single.cpp
nicolas/ch8/optical_flow_official_examples/: CMakeLists.txt
nicolas/ch8/optical_flow_official_examples/src/: cv_optical_flow.cpp  cv_optical_flow_dense.cpp  cv_optical_flow_nick.cpp
nicolas/ch8/optical_flow_official_examples/src/examples/: EqualizeHist_Demo.cpp  calcHist_Demo.cpp
nicolas/ch8/src/: direct_method_original.cpp  optical_flow.cpp  optical_flow_original.cpp  optical_flow_video.cpp
nicolas/common/: connected_components.cpp  connected_components.h  libUtils.cpp  libUtils.h  libUtils_basic.cpp  libUtils_basic.h  libUtils_eigen.cpp  libUtils_eigen.h  libUtils_fps.cpp  libUtils_fps.h  libUtils_opencv.cpp  libUtils_opencv.h
(+3 files in other folders)
